@@ -7,20 +7,20 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin\Debug\test" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/test" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
-					<Add directory="bin\Debug" />
+					<Add directory="bin/Debug" />
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin\Release\test" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/test" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -28,24 +28,24 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add directory="bin\Release" />
+					<Add directory="bin/Release" />
 				</Linker>
 			</Target>
 			<Target title="Debug64">
-				<Option output="bin\Debug64\test" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug64\" />
+				<Option output="bin/Debug64/test" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug64/" />
 				<Option type="1" />
 				<Option compiler="mingw64" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
-					<Add directory="bin\Debug64" />
+					<Add directory="bin/Debug64" />
 				</Linker>
 			</Target>
 			<Target title="Release64">
-				<Option output="bin\Release64\test" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release64\" />
+				<Option output="bin/Release64/test" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release64/" />
 				<Option type="1" />
 				<Option compiler="mingw64" />
 				<Compiler>
@@ -53,24 +53,24 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add directory="bin\Release64" />
+					<Add directory="bin/Release64" />
 				</Linker>
 			</Target>
 			<Target title="Debug32">
-				<Option output="bin\Debug32\test" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug32\" />
+				<Option output="bin/Debug32/test" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug32/" />
 				<Option type="1" />
 				<Option compiler="mingw32" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
-					<Add directory="bin\Debug32" />
+					<Add directory="bin/Debug32" />
 				</Linker>
 			</Target>
 			<Target title="Release32">
-				<Option output="bin\Release32\test" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release32\" />
+				<Option output="bin/Release32/test" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release32/" />
 				<Option type="1" />
 				<Option compiler="mingw32" />
 				<Compiler>
@@ -78,7 +78,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add directory="bin\Release32" />
+					<Add directory="bin/Release32" />
 				</Linker>
 			</Target>
 		</Build>
